2007-04-28  Vitaly Alexeev <tishka92@yahoo.com>

	* base/tu_config.h,
	* gameswf/gameswf_sound_handler_sdl.*: 
	* gameswf/gameswf_as_classes/as_db.*,
	* gameswf/gameswf_as_classes/as_netstream.*,
	* gameswf/gameswf_as_classes/as_table.*,
	USE_MYSQL ==> TU_CONFIG_LINK_TO_MYSQL
	USE_FFMPEG ==> TU_CONFIG_LINK_TO_FFMPEG
	* gameswf/gameswf_environment.h,
	* gameswf/gameswf_3ds.*: 
	The work on 3DS files has begun

2007-04-26  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf.h,
	* gameswf/gameswf_action.cpp,
	* gameswf/gameswf_as_classes/as_sound.cpp,
	fixed stopAllSounds() & setVolume()
	* gameswf/gameswf_environment.*
	* gameswf/gameswf_impl.*: added loadMovie("my.jpg", ...)
	
2007-04-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_as_classes/as_color.cpp: added getTransform() & setTransform()
	* gameswf/gameswf_cursor.cpp: updated a bit

2007-04-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp,
	* gameswf/gameswf_cursor.*: added clear_cursor()

2007-04-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_cursor.cpp: updated cursor (arrow ==> hand)

2007-04-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp,
	* gameswf/gameswf_root.cpp,
	* gameswf/gameswf_sprite.cpp,
	* gameswf/gameswf_cursor.* added the mouse cursor that is changed when points to 
	the active object

2007-04-22  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_value.*,
	* gameswf/gameswf_action.cpp: a bit cleanup

2007-04-21  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/a lot of files:
	as_value, as_as_function, as_environment & as_object moved to own files

2007-04-21  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.*: added addProperty() method to as_object()
	added PROPERTY type to as_value()

2007-04-21  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp: fixed action_buffer::execute(), 
	Flash keeps local variables after executing of frame actions therefore we should not delete them